--- a/index.html
+++ b/index.html
@@ -9,61 +9,63 @@
         </head>
 
         <body>
+          <!-- Top -->
             <div class="hero-img"></div>
-            <!-- <img src="img/Nike1.jpg" alt="Nike"> -->
 
             <div class="wrapper">
                 <header>
                     <a href="#" class="logo">Shoe<span>Brand</span></a>
 
                 <nav>
+                  <img src="img/close.svg" class="close" alt="">
                     <ul>
-
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Sneakers</a></li>
                         <li><a href="#">Players</a></li>
                     </ul>
-
-                    <img src="img/dashicons_arrow-left-alt2.png" class="dashicon" alt="Arrow" width="5" height="10">
-
                 </nav>
-                </header>
 
+                <img src="img/dashicons_arrow-left-alt2.png" class="dashicon" alt="Arrow">
+                </header>
+<!-- Top ends -->
+
+<!-- Hero section -->
             <section class="hero">
                 <h1>Regain your confidence on court.</h1>
 
                 <p class="subhead">A shoe built with purpose and to take your game to the next level.</p>
 
-                <img src="img/dashicons_arrow-left-alt2.png" alt="#">
+                <center><img src="img/dashicons_arrow-left-alt2.png" alt="#" class="dashicon dash"></center>
             </section>
+<!-- Hero section ends -->
 
+<!-- More info -->
             <section class="more-info">
-
                 <div class="feature">
-                    <div class="content">
-                        <p class="title">Lightweight</p>
-                        <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
+                    <div class="content cc">
+                        <b><p class="title">Lightweight</p></b>
+                        <p class="dec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     </div>
 
-                    <img src="img/Nike2.jpg" alt="Another shoe">
+                    <img src="img/Nike2.jpg" class="a" alt="Another shoe">
                 </div>
 
                 <div class="feature flip_left">
                     <div class="content">
-                        <p class="title">Lightweight</p>
-                        <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
+                        <b><p class="title">Lightweight</p></b>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     </div>
 
-                    <img src="img/Nike3.jpg" alt="Another shoe">
+                    <img src="img/Nike3.jpg" class="a" alt="Another shoe">
                 </div>
 
                 <div class="feature">
+                  <b><p class="title">Lightweight</p></b>
+                  <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     <div class="content">
-                        <p class="title">Lightweight</p>
-                        <p class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     </div>
 
-                    <img src="img/Nike4.jpg" alt="Another shoe">
+                    <img src="img/Nike4.jpg" class="a" alt="Another shoe">
                 </div>
             </section>
             </div>
