--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </ul>
                 </nav>
 
-                <img src="img/dashicons_arrow-left-alt2.png" class="dashicon" alt="Arrow">
+                <img src="img/dashicons_arrow-left-alt2.png" class="dashicon sideicon" alt="Arrow">
                 </header>
 <!-- Top ends -->
 
@@ -44,7 +44,7 @@
                 <div class="feature">
                     <div class="content cc">
                         <b><p class="title">Lightweight</p></b>
-                        <p class="dec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     </div>
 
                     <img src="img/Nike2.jpg" class="a" alt="Another shoe">
@@ -60,9 +60,9 @@
                 </div>
 
                 <div class="feature">
-                  <b><p class="title">Lightweight</p></b>
-                  <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     <div class="content">
+                      <b><p class="title">Lightweight</p></b>
+                      <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                     </div>
 
                     <img src="img/Nike4.jpg" class="a" alt="Another shoe">
