--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#" class="logo">Shoe<span>Brand</span></a>
 
                 <nav>
-                  <img src="img/close.svg" class="close" alt="">
+                  <img src="img/close.svg" class="close" alt="close">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Sneakers</a></li>
@@ -33,7 +33,7 @@
             <section class="hero">
                 <h1>Regain your confidence on court.</h1>
 
-                <p class="subhead">A shoe built with purpose and to take your game to the next level.</p>
+                <p class="subhead">Shoes built with purpose and to take your game to the next level.</p>
 
                 <center><img src="img/dashicons_arrow-left-alt2.png" alt="#" class="dashicon dash"></center>
             </section>
@@ -49,7 +49,7 @@
                     <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                   </div>
 
-                  <img src="img/Nike2.jpg" class="a" alt="Another shoe">
+                  <img src="img/NShoe1.jpg" class="a" alt="Another shoe">
                 </div>
 
                 <div class="feature flip_left">
@@ -58,7 +58,7 @@
                     <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                   </div>
 
-                  <img src="img/Nike3.jpg" class="a" alt="Another shoe">
+                  <img src="img/NShoe2.jpg" class="a" alt="Another shoe">
                 </div>
 
                 <div class="feature">
@@ -67,7 +67,7 @@
                     <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus sit nihil ipsa error obcaecati.</p>
                   </div>
 
-                  <img src="img/Nike4.jpg" class="a" alt="Another shoe">
+                  <img src="img/NShoe3.jpg" class="a" alt="Another shoe">
                 </div>
               </center>
 
